// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> should render correctly with custom props 1`] = `
<textarea
  class="StyledTextarea-sc-1v2djou-0 bKoJxV"
/>
`;

exports[`<Textarea /> should render correctly with default props 1`] = `
<textarea
  class="StyledTextarea-sc-1v2djou-0 whAUN"
/>
`;
